--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@
   --text-paragraph: 2rem;
 }
 
+::selection {
+  background: orange;
+}
+input::selection {
+  background: orange;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -45,10 +52,12 @@ h1 {
 }
 
 span,
-p {
+p,
+a {
   font-size: var(--text-paragraph);
   font-family: "Secondary";
   line-height: 1.2;
+  text-decoration: none;
 }
 
 img {
@@ -95,7 +104,8 @@ img {
   height: inherit;
 }
 
-.innovation_side {
+.innovation_side,
+.innovation_side a {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -135,49 +145,49 @@ img {
 }
 
 .innovation_card_index_container {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .innovation_card_index_container span {
-    display: block;
+  display: block;
 }
 
 .innovation_card_heading {
-    height: var(--text-h1);
-    text-align: center;
-    overflow: hidden;
+  height: var(--text-h1);
+  text-align: center;
+  overflow: hidden;
 }
 
 .innovation_card_paragraph {
-    height: 12rem;
-    text-align: center;
-    overflow: hidden;
+  height: 12rem;
+  text-align: center;
+  overflow: hidden;
 }
 
 .innovation_card_paragraph_container p {
-    height: 12rem;;
+  height: 12rem;
 }
 
 .innovation_card_thumbnail {
-    position: relative;
-    width: 100%;
-    height: 24rem;
+  position: relative;
+  width: 100%;
+  height: 24rem;
 }
 
 .innovation_card_thumbnail img {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .innovation_card_index_container,
 .innovation_card_heading_container,
 .innovation_card_paragraph_container {
-    transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 769px) {
-    html {
-        font-size: calc(100vw / 768 * 10);
-    }
+  html {
+    font-size: calc(100vw / 768 * 10);
+  }
 }
